--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,10 +2,10 @@
 
 <html lang="en">
   <%- include partials/header.ejs %>
-  <body>
+  <body id="login-page">
     <div class="container">
 
-      <form class="form-signin panel" id="login-panel" role="form">
+      <form class="form-signin panel" id="login-panel" role="form" action="/login" method="post">
         <div class="logo"><img src="images/logo.png"/></div>
         <input type="email" class="form-control" placeholder="Username" required autofocus>
         <input type="password" class="form-control" placeholder="Password" required>
