--- a/views/transactions.ejs
+++ b/views/transactions.ejs
@@ -3,8 +3,46 @@
 <html lang="en">
   <%- include partials/header.ejs %>
   <body>
+    <%- include partials/nav.ejs %>
     <div class="container">
-      TRANSACTIONS
+      <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Date</th>
+          <th>Transaction</th>
+          <th>Debit</th>
+          <th>Credit</th>
+        </tr>
+      </thead>
+      <tbody>
+        <!-- <tr>
+          <% for(var i=0; i<transactions.length; i++) {%>
+             <tr><%= transactions[i].date %></tr>
+             <tr><%= transactions[i].name %></tr>
+             <tr><%= transactions[i].debit %></tr>
+             <tr><%= transactions[i].credit %></tr>
+          <% } %>
+        </tr> -->
+        <tr>
+          <td>9/4/2014</td>
+          <td>431509548980 SPEEDY AUTO SERV</td>
+          <td>$41.28</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>9/4/2014</td>
+          <td>GAP OUTLET CANADA</td>
+          <td>$64.52</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>9/4/2014</td>
+          <td>SOBEYS</td>
+          <td>$28.11</td>
+          <td></td>
+        </tr>
+      </tbody>
+    </table>
     </div>
   </body>
 </html
