--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -2,8 +2,9 @@
 <html>
   <%- include partials/header.ejs %>
   <body>
-    <form method="post" enctype="multipart/form-data" action="/parse">
+    <form method="post" enctype="multipart/form-data" action="/receipt/gps">
        <input type="file" name="image" style="">
+       <input type="submit" value="submit">
     </form>
   </body>
 </html>
