uploads image and renames using date/time (switch to hash of id+time in future)

--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -2,9 +2,10 @@
 <html>
   <%- include partials/header.ejs %>
   <body>
-    <form method="post" enctype="multipart/form-data" action="/receipt/gps">
+    <form method="post" enctype="multipart/form-data" action="/receipt/meta">
        <input type="file" name="image" style="">
        <input type="submit" value="submit">
     </form>
+
   </body>
 </html>
