--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,8 @@
-<head>
-  <title><%= title %></title>
-  <link rel='stylesheet' href='/stylesheets/bootstrap.min.css' />
-  <link rel='stylesheet' href='/stylesheets/style.css' />
-</head>
+<title><%= title %></title>
+<link rel='stylesheet' href='/stylesheets/bootstrap.min.css' />
+<link rel='stylesheet' href='/stylesheets/style.css' />
+<!-- React JS -->
+<script src="http://fb.me/react-0.12.0.min.js"></script>
+<script src="http://fb.me/JSXTransformer-0.12.0.js"></script>
+<!-- Firebase JS -->
+<script src="https://cdn.firebase.com/js/client/2.0.3/firebase.js"></script>
