receipts are now stored in firebase

--- a/views/transactions/index.ejs
+++ b/views/transactions/index.ejs
@@ -9,6 +9,7 @@
     <div class="container">
       <div class="todoAppContainer">
           <h2>Transactions</h2>
+          <!--React Div -->
           <div id="Transactions"></div>
       </div>
     </div>
