--- a/views/transactions/add.ejs
+++ b/views/transactions/add.ejs
@@ -7,15 +7,15 @@
       <form role="form" action="/transaction/add" name="transaction" method="post">
         <div class="form-group">
           <label>Date</label>
-          <input type="text" class="form-control" placeholder="9/4/2014" name='date'>
+          <input type="text" class="form-control" placeholder="9/4/2014" name='date' required>
         </div>
         <div class="form-group">
           <label>Merchant</label>
-          <input type="text" class="form-control" placeholder="Walmart" name='merchant'>
+          <input type="text" class="form-control" placeholder="Walmart" name='merchant' required>
         </div>
         <div class="form-group">
           <label>Price</label>
-          <input type="text" class="form-control" placeholder="99.99" name='price'>
+          <input type="text" class="form-control" placeholder="99.99" name='price' required>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
         <button type="button" class="btn btn-default">Cancel</button>
