--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -2,10 +2,18 @@
 <html>
   <%- include partials/header.ejs %>
   <body>
-    <form method="post" enctype="multipart/form-data" action="/receipt/meta">
-       <input type="file" name="image" style="">
-       <input type="submit" value="submit">
-    </form>
-
+    <%- include partials/nav.ejs %>
+    <div class='container'>
+      <form role="form" class="col-lg-4" method="post" enctype="multipart/form-data" action="/receipt/meta">
+        <div class="form-group">
+          <label>Price</label>
+          <input type="text" class="form-control" placeholder="99.99" name='price' required>
+        </div>
+        <div class="form-group">
+         <input type="file" name="image" style="" required>
+       </div>
+         <button class="btn btn-primary" type="submit">Submit</button>
+      </form>
+    </div>
   </body>
 </html>
