receipt upload cleanup

--- a/views/receipt/new.ejs
+++ b/views/receipt/new.ejs
@@ -10,10 +10,13 @@
           <input type="text" class="form-control" placeholder="99.99" name='price' required>
         </div>
         <div class="form-group">
-         <input type="file" name="image" style="" required>
+         <fieldset id="zbasic">
+          <legend>Drop a file inside…</legend>
+          <p>Or click here to <em>Browse…</em></p>
+        </fieldset>
        </div>
          <button class="btn btn-primary" type="submit">Submit</button>
-         <a class="btn btn-default" href="/transaction">Cancel</button>
+         <a class="btn btn-default" href="/transaction">Cancel</a>
       </form>
     </div>
   </body>
