--- a/views/transactions/new.ejs
+++ b/views/transactions/new.ejs
@@ -7,7 +7,7 @@
       <form role="form" action="/transaction/add" name="transaction" method="post">
         <div class="form-group">
           <label>Date</label>
-          <input type="text" class="form-control" placeholder="9/4/2014" name='date' required>
+          <input type="text" class="form-control" placeholder="2014/1/30" name='date' required>
         </div>
         <div class="form-group">
           <label>Merchant</label>
@@ -18,7 +18,7 @@
           <input type="text" class="form-control" placeholder="99.99" name='price' required>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
-        <button type="button" class="btn btn-default">Cancel</button>
+        <a href ="/transaction" type="button" class="btn btn-default">Cancel</a>
       </form>
     </div>
   </body>
