--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -7,11 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">receipthub</a>
+      <a class="navbar-brand" href="/transaction">receipthub</a>
     </div>
-    <div id="navbar" class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
-      </ul>
-    </div><!--/.nav-collapse -->
   </div>
 </nav>
