--- a/views/receipt/new.ejs
+++ b/views/receipt/new.ejs
@@ -10,10 +10,7 @@
           <input type="text" class="form-control" placeholder="99.99" name='price' required>
         </div>
         <div class="form-group">
-         <fieldset id="zbasic">
-          <legend>Drop a file inside…</legend>
-          <p>Or click here to <em>Browse…</em></p>
-        </fieldset>
+         <input type="file" name="image" style="" required>
        </div>
          <button class="btn btn-primary" type="submit">Submit</button>
          <a class="btn btn-default" href="/transaction">Cancel</a>
