--- a/views/login.hbs
+++ b/views/login.hbs
@@ -5,4 +5,4 @@
     <input name='password' type="password" class="form-control" placeholder="Password" required>
     <button class="btn btn-lg btn-primary btn-block btn-login" type="submit">Sign in</button>
   </form>
-</div> <!-- /container -->
+</div>
