--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,7 +1,7 @@
 <link rel='stylesheet' href='/stylesheets/bootstrap.min.css' />
 <link rel='stylesheet' href='/stylesheets/style.css' />
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
-<script src="/javascripts/bootstrap.min.js"></script>
 <!-- React JS -->
 <script src="http://fb.me/react-0.12.0.min.js"></script>
 <script src="http://fb.me/JSXTransformer-0.12.0.js"></script>
