--- a/views/partials/leftNav.hbs
+++ b/views/partials/leftNav.hbs
@@ -1,11 +1,11 @@
 <div id='leftNav'>
   <div class="leftNav-btn">
     <i class="fa fa-home fa-4x"></i>
-    <p>Home</p>
+    <p class='text-center'>Home</p>
   </div>
   <div class="leftNav-btn leftNav-active">
     <i class="fa fa-paperclip fa-4x"></i>
-    <p>Purchases</p>
+    <p class='text-center'>Purchases</p>
   </div>
   <div class="leftNav-btn">
     <i class="fa fa-pie-chart fa-4x"></i>
