--- a/views/partials/leftNav.hbs
+++ b/views/partials/leftNav.hbs
@@ -1,14 +1,22 @@
-<div id='leftNav'>
+<div id='leftNav' class='hidden-xs'>
   <div class="leftNav-btn">
-    <i class="fa fa-home fa-4x"></i>
+    <a href="/"><i class="fa fa-home fa-4x"></i></a>
     <p class='text-center'>Home</p>
   </div>
   <div class="leftNav-btn leftNav-active">
-    <i class="fa fa-paperclip fa-4x"></i>
+    <a href="/transaction"><i class="fa fa-paperclip fa-4x"></i></a>
     <p class='text-center'>Purchases</p>
   </div>
   <div class="leftNav-btn">
-    <i class="fa fa-pie-chart fa-4x"></i>
+    <a class='' href="/budget"><i class="fa fa-pie-chart fa-4x"></i></a>
     <p class='text-center'>Budget</p>
+  </div>
+  <div class="leftNav-btn">
+    <a class='' href="/"><i class="fa fa-usd fa-4x"></i></a>
+    <p class='text-center'>Savings</p>
+  </div>
+  <div class="leftNav-btn">
+    <a class='' href="/"><i class="fa fa-money fa-4x"></i></a>
+    <p class='text-center'>Claims</p>
   </div>
 </div>
