--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -9,8 +9,10 @@
       {{>nav}}
         <div class="row">
           {{>leftNav}}
-          <div class="col-sm-offset-2 col-xs-offset-3 col-md-offset-1 col-sm-10">
-            {{{body}}}
+          <div class="container">
+            <div class="col-sm-offset-1 col-sm-10">
+              {{{body}}}
+            </div>
           </div>
       </div>
   </body>
