--- a/views/transactions/index.hbs
+++ b/views/transactions/index.hbs
@@ -1,11 +1,77 @@
 <div class="todoAppContainer">
     <div class="row">
-      <h2 class='col-lg-2'>Transactions</h2>
-      <h2 class="col-lg-2">
-        <a href="receipt/upload" class='btn btn-default'>add</a>
+      <h2 class='col-lg-2'>Purchases</h2>
+      <h2 class="col-lg-1 pull-right">
+        <a href="transaction/add" class='pull-right add-trans'><i class="fa fa-plus"></i></a>
       </h2>
     </div>
     <!--React Div -->
-    <div id="Transactions"></div>
+    <div id="Transactions">
+      <table class="table table-striped table-hover">
+        <tr>
+          <th>
+            Monday Nov 21
+          </th>
+          <th class='hidden-xs'>
+          </th>
+          <th>
+            $79.99
+          </th>
+        </tr>
+        <tr>
+          <td style='width: 150px;'>
+            Balzacs
+          </td>
+          <td class='hidden-xs'>
+            <span class="rh-food">
+              <i class="fa fa-tag"></i>
+              Food
+            </span>
+          </td>
+          <td style='width: 100px;'>
+            <i class="fa fa-file-text"></i>
+            $4.60
+          </td>
+        </tr>
+        <tr>
+          <td style='width: 150px;'>
+            Futureshop
+          </td>
+          <td class='hidden-xs'>
+            <span class="rh-electronics">
+              <i class="fa fa-tag"></i>
+              Electronics
+            </span>
+            <span class="rh-entertainment">
+              <i class="fa fa-tag rh-entertainment"></i>
+              Entertainment
+            </span>
+            <span class="rh-appliances">
+              <i class="fa fa-tag rh-appliances"></i>
+              Appliances
+            </span>
+          </td>
+          <td style='width: 100px;'>
+            <i class="fa fa-file-text"></i>
+            $24.60
+          </td>
+        </tr>
+        <tr>
+          <td style='width: 150px;'>
+            Best Buy
+          </td>
+          <td class='hidden-xs'>
+            <span class="rh-entertainment">
+              <i class="fa fa-tag"></i>
+              Entertainment
+            </span>
+          </td>
+          <td style='width: 100px;'>
+            <a href="receipt/upload"><i class="fa fa-upload rh-receipt"></i></a>
+            $9.85
+          </td>
+        </tr>
+      </table>
+    </div>
 </div>
-<script type="text/jsx" src="../../javascripts/transactions.js"></script>
+<!-- <script type="text/jsx" src="../../javascripts/transactions.js"></script> -->
