fixed header, and made table responsive

--- a/views/transactions/index.hbs
+++ b/views/transactions/index.hbs
@@ -7,37 +7,35 @@
     </div>
     <!--React Div -->
     <div id="Transactions">
-      <table class="table table-striped table-hover">
+      <table class="table table-striped table-hover table-responsive ">
         <tr>
-          <th>
-            Monday Nov 21
-          </th>
-          <th class='hidden-xs'>
+          <th colspan=2>
+            Monday Nov 21, 2014
           </th>
           <th>
             $79.99
           </th>
         </tr>
         <tr>
-          <td style='width: 150px;'>
+          <td>
             Balzacs
           </td>
-          <td class='hidden-xs'>
+          <td>
             <span class="rh-food">
               <i class="fa fa-tag"></i>
               Food
             </span>
           </td>
-          <td style='width: 100px;'>
+          <td>
             <i class="fa fa-file-text"></i>
             $4.60
           </td>
         </tr>
         <tr>
-          <td style='width: 150px;'>
+          <td>
             Futureshop
           </td>
-          <td class='hidden-xs'>
+          <td>
             <span class="rh-electronics">
               <i class="fa fa-tag"></i>
               Electronics
@@ -51,22 +49,22 @@
               Appliances
             </span>
           </td>
-          <td style='width: 100px;'>
+          <td>
             <i class="fa fa-file-text"></i>
             $24.60
           </td>
         </tr>
         <tr>
-          <td style='width: 150px;'>
+          <td>
             Best Buy
           </td>
-          <td class='hidden-xs'>
+          <td>
             <span class="rh-entertainment">
               <i class="fa fa-tag"></i>
               Entertainment
             </span>
           </td>
-          <td style='width: 100px;'>
+          <td>
             <a href="receipt/upload"><i class="fa fa-upload rh-receipt"></i></a>
             $9.85
           </td>
