--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -41,9 +41,19 @@
   border-top-right-radius: 0;
 }
 
+.nav-right{
+  margin-top: 10px;
+  margin-right: 5px;
+}
 .logo img {
   text-align:center;
   width:100%;
+}
+.brand {
+  width: 200px;
+}
+.nav-logo {
+  width: 200px;
 }
 
 .panel#login-panel {
@@ -56,7 +66,7 @@
 }
 
 #leftNav{
-  position:absolute;
+  position:fixed;
   background-color:#333;
   left:0;
   top: 50px;
