--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,14 +1,10 @@
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-  <div class="container">
-    <div class="navbar-header">
+    <a href="/" class='nav-logo'>
       <img src="/images/logo.png" width='200px'>
+    </a>
+    <div class="pull-right nav-right">
+        <a href="" class='btn btn-link'>Settings</a>
+        <a href="/logout" class='btn btn-link'>Logout</a>
     </div>
-   <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="">Settings</a></li>
-        <li><a href="/logout">Logout</a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
   </div>
 </nav>
