fixed purchases on mobile

--- a/views/transactions/index.hbs
+++ b/views/transactions/index.hbs
@@ -1,7 +1,7 @@
 <div class="todoAppContainer">
     <div class="row">
-      <h2 class='col-lg-2'>Purchases</h2>
-      <h2 class="col-lg-1 pull-right">
+      <h2 class='col-xs-1'>Purchases</h2>
+      <h2 class="col-xs-1 pull-right">
         <a href="transaction/add" class='pull-right add-trans'><i class="fa fa-plus"></i></a>
       </h2>
     </div>
