styling responsive updates

--- a/views/transactions/index.hbs
+++ b/views/transactions/index.hbs
@@ -12,7 +12,7 @@
           <th colspan=2>
             Monday Nov 21, 2014
           </th>
-          <th>
+          <th class='pull-right'>
             $79.99
           </th>
         </tr>
@@ -23,10 +23,10 @@
           <td>
             <span class="rh-food">
               <i class="fa fa-tag"></i>
-              Food
+              <span class='hidden-xs'>Food</span>
             </span>
           </td>
-          <td>
+          <td class='pull-right'>
             <i class="fa fa-file-text"></i>
             $4.60
           </td>
@@ -38,18 +38,18 @@
           <td>
             <span class="rh-electronics">
               <i class="fa fa-tag"></i>
-              Electronics
+              <span class='hidden-xs'>Electronics</span>
             </span>
             <span class="rh-entertainment">
               <i class="fa fa-tag rh-entertainment"></i>
-              Entertainment
+              <span class='hidden-xs'>Entertainment</span>
             </span>
             <span class="rh-appliances">
               <i class="fa fa-tag rh-appliances"></i>
-              Appliances
+              <span class='hidden-xs'>Appliances</span>
             </span>
           </td>
-          <td>
+          <td class='pull-right'>
             <i class="fa fa-file-text"></i>
             $24.60
           </td>
@@ -61,10 +61,10 @@
           <td>
             <span class="rh-entertainment">
               <i class="fa fa-tag"></i>
-              Entertainment
+              <span class='hidden-xs'>Entertainment</span>
             </span>
           </td>
-          <td>
+          <td class='pull-right'>
             <a href="receipt/upload"><i class="fa fa-upload rh-receipt"></i></a>
             $9.85
           </td>
