on xs move left nav under main nav

--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -7,9 +7,9 @@
   </head>
   <body>
       {{>nav}}
-        <div class="row">
+        <div  class="row">
           {{>leftNav}}
-          <div class="container">
+          <div id='main-container' class="container">
             <div class="col-sm-12">
                 {{{body}}}
             </div>
