--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -8,3 +8,20 @@
     </div>
   </div>
 </nav>
+<span id='mobile-nav' class="hidden-md hidden-lg hidden-sm">
+  <div class="btn">
+    <a href="/"><i class="fa fa-home fa-2x"></i></a>
+  </div>
+  <div class="btn">
+    <a href="/transaction"><i class="fa fa-paperclip fa-2x"></i></a>
+  </div>
+  <div class="btn">
+    <a class='' href="/budget"><i class="fa fa-pie-chart fa-2x"></i></a>
+  </div>
+  <div class="btn">
+    <a class='' href="/"><i class="fa fa-usd fa-2x"></i></a>
+  </div>
+  <div class="btn">
+    <a class='' href="/"><i class="fa fa-money fa-2x"></i></a>
+  </div>
+</span>
