--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -65,6 +65,36 @@
   border-color: #20c05c;
 }
 
+#mobile-nav{
+  position:absolute;
+  background-color:#333;
+  width:100%;
+  height: 60px;
+  margin-top: -10px;
+}
+
+#mobile-nav>.btn {
+  padding: 15px;
+  color: #929292;
+}
+#mobile-nav>.btn:hover {
+  background-color: #eee;
+}
+#mobile-nav>.btn>a {
+  height: 50px;
+  width: 33%;
+  color: #929292;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+@media(max-width:767px){
+  #main-container{
+    margin-top: 70px;
+  }
+
+}
+
 #leftNav{
   position:fixed;
   background-color:#333;
