add basic receipt showing functionality

--- a/views/transactions/index.hbs
+++ b/views/transactions/index.hbs
@@ -27,7 +27,7 @@
             </span>
           </td>
           <td class='pull-right'>
-            <i class="fa fa-file-text"></i>
+            <a href="receipt/1"><i class="fa fa-file-text rh-receipt"></i></a>
             $4.60
           </td>
         </tr>
@@ -50,7 +50,7 @@
             </span>
           </td>
           <td class='pull-right'>
-            <i class="fa fa-file-text"></i>
+            <a href="receipt/2"><i class="fa fa-file-text rh-receipt"></i></a>
             $24.60
           </td>
         </tr>
