basic receipt viewing page added

--- a/views/transactions/index.hbs
+++ b/views/transactions/index.hbs
@@ -50,7 +50,7 @@
             </span>
           </td>
           <td class='pull-right'>
-            <a href="receipt/2"><i class="fa fa-file-text rh-receipt"></i></a>
+            <a href="receipt/-Jb9it8daO96qfmxzJY1"><i class="fa fa-file-text rh-receipt"></i></a>
             $24.60
           </td>
         </tr>
