--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+      <meta name="apple-mobile-web-app-capable" content="yes">
       <meta charset="utf-8">
       {{>header}}
       <title>{{title}}</title>
