--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -3,7 +3,7 @@
       <img src="/images/logo.png" width='200px'>
     </a>
     <div class="pull-right nav-right">
-        <a href="" class='btn btn-link'>Settings</a>
+        <a href="" class='btn btn-link hidden-xs'>Settings</a>
         <a href="/logout" class='btn btn-link'>Logout</a>
     </div>
   </div>
