--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,3 +1,6 @@
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
+<meta charset="utf-8">
 <link rel='stylesheet' href='/stylesheets/bootstrap.min.css' />
 <link rel='stylesheet' href='/stylesheets/style.css' />
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
@@ -7,3 +10,4 @@
 <script src="http://fb.me/JSXTransformer-0.12.0.js"></script>
 <!-- Firebase JS -->
 <script src="https://cdn.firebase.com/js/client/2.0.3/firebase.js"></script>
+<script src="/javascripts/routing.js"></script>
