--- a/views/transactions/index.hbs
+++ b/views/transactions/index.hbs
@@ -69,6 +69,242 @@
             $9.85
           </td>
         </tr>
+        <tr>
+          <th colspan=2>
+            Sunday Nov 20,2014
+          </th>
+          <th class='pull-right'>
+            $105.88
+          </th>
+        </tr>
+        <tr>
+          <td>
+            Imperial Oil
+          </td>
+          <td>
+            <span class="rh-auto">
+              <i class="fa fa-tag"></i>
+              <span class='hidden-xs'>Auto</span>
+            </span>
+          </td>
+          <td class='pull-right'>
+            <a href="receipt/1"><i class="fa fa-file-text rh-receipt"></i></a>
+            $40.98
+          </td>
+        </tr>
+        <tr>
+          <td>
+            HEYLUCY
+          </td>
+          <td>
+            <span class="rh-food">
+              <i class="fa fa-tag"></i>
+              <span class='hidden-xs'>Food</span>
+            </span>
+          </td>
+          <td class='pull-right'>
+            <a href="receipt/-JbKRu27g6cwRsR_4M8b"><i class="fa fa-file-text rh-receipt"></i></a>
+            $31.08
+          </td>
+        </tr>
+        <tr>
+          <td>
+            Walmart
+          </td>
+          <td>
+            <span class="rh-entertainment">
+              <i class="fa fa-tag"></i>
+              <span class='hidden-xs'>Entertainment</span>
+            </span>
+          </td>
+          <td class='pull-right'>
+            <a href="receipt/upload"><i class="fa fa-upload rh-receipt"></i></a>
+            $39.85
+          </td>
+        </tr>
+        <tr>
+          <th colspan=2>
+            Monday Nov 21, 2014
+          </th>
+          <th class='pull-right'>
+            $79.99
+          </th>
+        </tr>
+        <tr>
+          <td>
+            Balzacs
+          </td>
+          <td>
+            <span class="rh-food">
+              <i class="fa fa-tag"></i>
+              <span class='hidden-xs'>Food</span>
+            </span>
+          </td>
+          <td class='pull-right'>
+            <a href="receipt/1"><i class="fa fa-file-text rh-receipt"></i></a>
+            $4.60
+          </td>
+        </tr>
+        <tr>
+          <td>
+            Futureshop
+          </td>
+          <td>
+            <span class="rh-electronics">
+              <i class="fa fa-tag"></i>
+              <span class='hidden-xs'>Electronics</span>
+            </span>
+            <span class="rh-entertainment">
+              <i class="fa fa-tag rh-entertainment"></i>
+              <span class='hidden-xs'>Entertainment</span>
+            </span>
+            <span class="rh-appliances">
+              <i class="fa fa-tag rh-appliances"></i>
+              <span class='hidden-xs'>Appliances</span>
+            </span>
+          </td>
+          <td class='pull-right'>
+            <a href="receipt/-Jb9it8daO96qfmxzJY1"><i class="fa fa-file-text rh-receipt"></i></a>
+            $24.60
+          </td>
+        </tr>
+        <tr>
+          <td>
+            Best Buy
+          </td>
+          <td>
+            <span class="rh-entertainment">
+              <i class="fa fa-tag"></i>
+              <span class='hidden-xs'>Entertainment</span>
+            </span>
+          </td>
+          <td class='pull-right'>
+            <a href="receipt/upload"><i class="fa fa-upload rh-receipt"></i></a>
+            $9.85
+          </td>
+        </tr>
+        <tr>
+          <th colspan=2>
+            Monday Nov 21, 2014
+          </th>
+          <th class='pull-right'>
+            $79.99
+          </th>
+        </tr>
+        <tr>
+          <td>
+            Balzacs
+          </td>
+          <td>
+            <span class="rh-food">
+              <i class="fa fa-tag"></i>
+              <span class='hidden-xs'>Food</span>
+            </span>
+          </td>
+          <td class='pull-right'>
+            <a href="receipt/1"><i class="fa fa-file-text rh-receipt"></i></a>
+            $4.60
+          </td>
+        </tr>
+        <tr>
+          <td>
+            Futureshop
+          </td>
+          <td>
+            <span class="rh-electronics">
+              <i class="fa fa-tag"></i>
+              <span class='hidden-xs'>Electronics</span>
+            </span>
+            <span class="rh-entertainment">
+              <i class="fa fa-tag rh-entertainment"></i>
+              <span class='hidden-xs'>Entertainment</span>
+            </span>
+            <span class="rh-appliances">
+              <i class="fa fa-tag rh-appliances"></i>
+              <span class='hidden-xs'>Appliances</span>
+            </span>
+          </td>
+          <td class='pull-right'>
+            <a href="receipt/-Jb9it8daO96qfmxzJY1"><i class="fa fa-file-text rh-receipt"></i></a>
+            $24.60
+          </td>
+        </tr>
+        <tr>
+          <td>
+            Best Buy
+          </td>
+          <td>
+            <span class="rh-entertainment">
+              <i class="fa fa-tag"></i>
+              <span class='hidden-xs'>Entertainment</span>
+            </span>
+          </td>
+          <td class='pull-right'>
+            <a href="receipt/upload"><i class="fa fa-upload rh-receipt"></i></a>
+            $9.85
+          </td>
+        </tr>
+        <tr>
+          <th colspan=2>
+            Monday Nov 21, 2014
+          </th>
+          <th class='pull-right'>
+            $79.99
+          </th>
+        </tr>
+        <tr>
+          <td>
+            Balzacs
+          </td>
+          <td>
+            <span class="rh-food">
+              <i class="fa fa-tag"></i>
+              <span class='hidden-xs'>Food</span>
+            </span>
+          </td>
+          <td class='pull-right'>
+            <a href="receipt/1"><i class="fa fa-file-text rh-receipt"></i></a>
+            $4.60
+          </td>
+        </tr>
+        <tr>
+          <td>
+            Futureshop
+          </td>
+          <td>
+            <span class="rh-electronics">
+              <i class="fa fa-tag"></i>
+              <span class='hidden-xs'>Electronics</span>
+            </span>
+            <span class="rh-entertainment">
+              <i class="fa fa-tag rh-entertainment"></i>
+              <span class='hidden-xs'>Entertainment</span>
+            </span>
+            <span class="rh-appliances">
+              <i class="fa fa-tag rh-appliances"></i>
+              <span class='hidden-xs'>Appliances</span>
+            </span>
+          </td>
+          <td class='pull-right'>
+            <a href="receipt/-Jb9it8daO96qfmxzJY1"><i class="fa fa-file-text rh-receipt"></i></a>
+            $24.60
+          </td>
+        </tr>
+        <tr>
+          <td>
+            Best Buy
+          </td>
+          <td>
+            <span class="rh-entertainment">
+              <i class="fa fa-tag"></i>
+              <span class='hidden-xs'>Entertainment</span>
+            </span>
+          </td>
+          <td class='pull-right'>
+            <a href="receipt/upload"><i class="fa fa-upload rh-receipt"></i></a>
+            $9.85
+          </td>
+        </tr>
       </table>
     </div>
 </div>
