receipt styling and exif parsing

--- a/views/receipt/show.hbs
+++ b/views/receipt/show.hbs
@@ -1,2 +1,1 @@
-HERE'S YOUR RECEIPT
-<img src="../uploads/{{receipt}}.jpg" alt="" />
+<img src="../uploads/{{receipt}}.jpg" alt="" width='400' height='550'/>
