--- a/views/transactions/index.hbs
+++ b/views/transactions/index.hbs
@@ -10,10 +10,10 @@
       <table class="table table-striped table-hover table-responsive ">
         <tr>
           <th colspan=2>
-            Monday Nov 21, 2014
+            Friday Nov 21, 2014
           </th>
           <th class='pull-right'>
-            $79.99
+            $1269.05
           </th>
         </tr>
         <tr>
@@ -22,7 +22,7 @@
           </td>
           <td>
             <span class="rh-food">
-              <i class="fa fa-tag"></i>
+              <i class="fa fa-cutlery"></i>
               <span class='hidden-xs'>Food</span>
             </span>
           </td>
@@ -37,15 +37,15 @@
           </td>
           <td>
             <span class="rh-electronics">
-              <i class="fa fa-tag"></i>
+              <i class="fa fa-desktop"></i>
               <span class='hidden-xs'>Electronics</span>
             </span>
             <span class="rh-entertainment">
-              <i class="fa fa-tag rh-entertainment"></i>
+              <i class="fa fa-ticket rh-entertainment"></i>
               <span class='hidden-xs'>Entertainment</span>
             </span>
             <span class="rh-appliances">
-              <i class="fa fa-tag rh-appliances"></i>
+              <i class="fa fa-plug rh-appliances"></i>
               <span class='hidden-xs'>Appliances</span>
             </span>
           </td>
@@ -56,22 +56,22 @@
         </tr>
         <tr>
           <td>
-            Best Buy
+            Walper Hotel Room Service
           </td>
           <td>
-            <span class="rh-entertainment">
-              <i class="fa fa-tag"></i>
-              <span class='hidden-xs'>Entertainment</span>
+            <span class="rh-business">
+              <i class="fa fa-suitcase"></i>
+              <span class='hidden-xs'>Business</span>
             </span>
           </td>
           <td class='pull-right'>
             <a href="receipt/upload"><i class="fa fa-upload rh-receipt"></i></a>
-            $9.85
+            $1239.85
           </td>
         </tr>
         <tr>
           <th colspan=2>
-            Sunday Nov 20,2014
+            Thursday Nov 20, 2014
           </th>
           <th class='pull-right'>
             $105.88
@@ -83,7 +83,7 @@
           </td>
           <td>
             <span class="rh-auto">
-              <i class="fa fa-tag"></i>
+              <i class="fa fa-car"></i>
               <span class='hidden-xs'>Auto</span>
             </span>
           </td>
@@ -94,11 +94,11 @@
         </tr>
         <tr>
           <td>
-            HEYLUCY
+            Hey Lucy! Cafe
           </td>
           <td>
             <span class="rh-food">
-              <i class="fa fa-tag"></i>
+              <i class="fa fa-cutlery"></i>
               <span class='hidden-xs'>Food</span>
             </span>
           </td>
@@ -113,7 +113,7 @@
           </td>
           <td>
             <span class="rh-entertainment">
-              <i class="fa fa-tag"></i>
+              <i class="fa fa-ticket"></i>
               <span class='hidden-xs'>Entertainment</span>
             </span>
           </td>
@@ -124,7 +124,7 @@
         </tr>
         <tr>
           <th colspan=2>
-            Monday Nov 21, 2014
+            Wednesday Nov 19, 2014
           </th>
           <th class='pull-right'>
             $79.99
@@ -136,7 +136,7 @@
           </td>
           <td>
             <span class="rh-food">
-              <i class="fa fa-tag"></i>
+              <i class="fa fa-cutlery"></i>
               <span class='hidden-xs'>Food</span>
             </span>
           </td>
@@ -151,15 +151,15 @@
           </td>
           <td>
             <span class="rh-electronics">
-              <i class="fa fa-tag"></i>
+              <i class="fa fa-desktop"></i>
               <span class='hidden-xs'>Electronics</span>
             </span>
             <span class="rh-entertainment">
-              <i class="fa fa-tag rh-entertainment"></i>
+              <i class="fa fa-ticket rh-entertainment"></i>
               <span class='hidden-xs'>Entertainment</span>
             </span>
             <span class="rh-appliances">
-              <i class="fa fa-tag rh-appliances"></i>
+              <i class="fa fa-plug rh-appliances"></i>
               <span class='hidden-xs'>Appliances</span>
             </span>
           </td>
@@ -174,7 +174,7 @@
           </td>
           <td>
             <span class="rh-entertainment">
-              <i class="fa fa-tag"></i>
+              <i class="fa fa-ticket"></i>
               <span class='hidden-xs'>Entertainment</span>
             </span>
           </td>
@@ -197,7 +197,7 @@
           </td>
           <td>
             <span class="rh-food">
-              <i class="fa fa-tag"></i>
+              <i class="fa fa-cutlery"></i>
               <span class='hidden-xs'>Food</span>
             </span>
           </td>
@@ -212,15 +212,15 @@
           </td>
           <td>
             <span class="rh-electronics">
-              <i class="fa fa-tag"></i>
+              <i class="fa fa-desktop"></i>
               <span class='hidden-xs'>Electronics</span>
             </span>
             <span class="rh-entertainment">
-              <i class="fa fa-tag rh-entertainment"></i>
+              <i class="fa fa-ticket rh-entertainment"></i>
               <span class='hidden-xs'>Entertainment</span>
             </span>
             <span class="rh-appliances">
-              <i class="fa fa-tag rh-appliances"></i>
+              <i class="fa fa-plug rh-appliances"></i>
               <span class='hidden-xs'>Appliances</span>
             </span>
           </td>
@@ -235,7 +235,7 @@
           </td>
           <td>
             <span class="rh-entertainment">
-              <i class="fa fa-tag"></i>
+              <i class="fa fa-ticket"></i>
               <span class='hidden-xs'>Entertainment</span>
             </span>
           </td>
@@ -258,7 +258,7 @@
           </td>
           <td>
             <span class="rh-food">
-              <i class="fa fa-tag"></i>
+              <i class="fa fa-cutlery"></i>
               <span class='hidden-xs'>Food</span>
             </span>
           </td>
@@ -273,15 +273,15 @@
           </td>
           <td>
             <span class="rh-electronics">
-              <i class="fa fa-tag"></i>
+              <i class="fa fa-desktop"></i>
               <span class='hidden-xs'>Electronics</span>
             </span>
             <span class="rh-entertainment">
-              <i class="fa fa-tag rh-entertainment"></i>
+              <i class="fa fa-ticket rh-entertainment"></i>
               <span class='hidden-xs'>Entertainment</span>
             </span>
             <span class="rh-appliances">
-              <i class="fa fa-tag rh-appliances"></i>
+              <i class="fa fa-plug rh-appliances"></i>
               <span class='hidden-xs'>Appliances</span>
             </span>
           </td>
@@ -296,7 +296,7 @@
           </td>
           <td>
             <span class="rh-entertainment">
-              <i class="fa fa-tag"></i>
+              <i class="fa fa-ticket"></i>
               <span class='hidden-xs'>Entertainment</span>
             </span>
           </td>
