--- a/views/transactions/index.hbs
+++ b/views/transactions/index.hbs
@@ -27,7 +27,7 @@
             </span>
           </td>
           <td class='pull-right'>
-            <a href="receipt/1"><i class="fa fa-file-text rh-receipt"></i></a>
+            <a href="receipt/-JbNKzNXx_0ReeNL5pgS"><i class="fa fa-file-text rh-receipt"></i></a>
             $4.60
           </td>
         </tr>
@@ -44,13 +44,9 @@
               <i class="fa fa-ticket rh-entertainment"></i>
               <span class='hidden-xs'>Entertainment</span>
             </span>
-            <span class="rh-appliances">
-              <i class="fa fa-plug rh-appliances"></i>
-              <span class='hidden-xs'>Appliances</span>
-            </span>
           </td>
           <td class='pull-right'>
-            <a href="receipt/-Jb9it8daO96qfmxzJY1"><i class="fa fa-file-text rh-receipt"></i></a>
+            <a href="receipt/-JbNKzNXx_0ReeNL5pgS"><i class="fa fa-file-text rh-receipt"></i></a>
             $24.60
           </td>
         </tr>
@@ -88,7 +84,7 @@
             </span>
           </td>
           <td class='pull-right'>
-            <a href="receipt/1"><i class="fa fa-file-text rh-receipt"></i></a>
+            <a href="receipt/-JbNNDmvXElrnWjJVuXG"><i class="fa fa-file-text rh-receipt"></i></a>
             $40.98
           </td>
         </tr>
@@ -103,7 +99,7 @@
             </span>
           </td>
           <td class='pull-right'>
-            <a href="receipt/-JbKRu27g6cwRsR_4M8b"><i class="fa fa-file-text rh-receipt"></i></a>
+            <a href="receipt/-JbNNDmvXElrnWjJVuXG"><i class="fa fa-file-text rh-receipt"></i></a>
             $31.08
           </td>
         </tr>
@@ -127,7 +123,7 @@
             Wednesday Nov 19, 2014
           </th>
           <th class='pull-right'>
-            $79.99
+            $69.91
           </th>
         </tr>
         <tr>
@@ -141,8 +137,8 @@
             </span>
           </td>
           <td class='pull-right'>
-            <a href="receipt/1"><i class="fa fa-file-text rh-receipt"></i></a>
-            $4.60
+            <a href="receipt/-JbNNDmvXElrnWjJVuXG"><i class="fa fa-file-text rh-receipt"></i></a>
+            $9.61
           </td>
         </tr>
         <tr>
@@ -154,33 +150,14 @@
               <i class="fa fa-desktop"></i>
               <span class='hidden-xs'>Electronics</span>
             </span>
-            <span class="rh-entertainment">
-              <i class="fa fa-ticket rh-entertainment"></i>
-              <span class='hidden-xs'>Entertainment</span>
-            </span>
             <span class="rh-appliances">
               <i class="fa fa-plug rh-appliances"></i>
               <span class='hidden-xs'>Appliances</span>
             </span>
           </td>
           <td class='pull-right'>
-            <a href="receipt/-Jb9it8daO96qfmxzJY1"><i class="fa fa-file-text rh-receipt"></i></a>
+            <a href="receipt/-JbNNDmvXElrnWjJVuXG"><i class="fa fa-file-text rh-receipt"></i></a>
             $24.60
-          </td>
-        </tr>
-        <tr>
-          <td>
-            Best Buy
-          </td>
-          <td>
-            <span class="rh-entertainment">
-              <i class="fa fa-ticket"></i>
-              <span class='hidden-xs'>Entertainment</span>
-            </span>
-          </td>
-          <td class='pull-right'>
-            <a href="receipt/upload"><i class="fa fa-upload rh-receipt"></i></a>
-            $9.85
           </td>
         </tr>
         <tr>
@@ -208,7 +185,7 @@
         </tr>
         <tr>
           <td>
-            Futureshop
+            Jack's Radio Boutique
           </td>
           <td>
             <span class="rh-electronics">
@@ -225,13 +202,13 @@
             </span>
           </td>
           <td class='pull-right'>
-            <a href="receipt/-Jb9it8daO96qfmxzJY1"><i class="fa fa-file-text rh-receipt"></i></a>
+            <a href="receipt/-JbNNDmvXElrnWjJVuXG"><i class="fa fa-file-text rh-receipt"></i></a>
             $24.60
           </td>
         </tr>
         <tr>
           <td>
-            Best Buy
+            Sears
           </td>
           <td>
             <span class="rh-entertainment">
@@ -249,12 +226,12 @@
             Monday Nov 21, 2014
           </th>
           <th class='pull-right'>
-            $79.99
+            $30.99
           </th>
         </tr>
         <tr>
           <td>
-            Balzacs
+            Tim Horton's
           </td>
           <td>
             <span class="rh-food">
@@ -263,13 +240,13 @@
             </span>
           </td>
           <td class='pull-right'>
-            <a href="receipt/1"><i class="fa fa-file-text rh-receipt"></i></a>
-            $4.60
+            <a href="receipt/-JbNKzNXx_0ReeNL5pgS"><i class="fa fa-file-text rh-receipt"></i></a>
+            $1.65
           </td>
         </tr>
         <tr>
           <td>
-            Futureshop
+            The Bay
           </td>
           <td>
             <span class="rh-electronics">
@@ -280,14 +257,10 @@
               <i class="fa fa-ticket rh-entertainment"></i>
               <span class='hidden-xs'>Entertainment</span>
             </span>
-            <span class="rh-appliances">
-              <i class="fa fa-plug rh-appliances"></i>
-              <span class='hidden-xs'>Appliances</span>
-            </span>
           </td>
           <td class='pull-right'>
-            <a href="receipt/-Jb9it8daO96qfmxzJY1"><i class="fa fa-file-text rh-receipt"></i></a>
-            $24.60
+            <a href="receipt/-JbNKzNXx_0ReeNL5pgS"><i class="fa fa-file-text rh-receipt"></i></a>
+            $29.60
           </td>
         </tr>
         <tr>
