--- a/views/budget/spending.hbs
+++ b/views/budget/spending.hbs
@@ -1,6 +1,34 @@
-<div class='col-sm-3'>
-  <div id="canvas-holder">
-  	<canvas id="chart-area" width="100" height="100"/>
+<div class="col-md-12">
+  <div class="panel panel-default">
+    <div class="panel-heading panel-title">November 2014</div>
+    <div class="panel-body">
+      <div id="canvas-holder">
+        <canvas id="chart-area2" width="1000" height="400"/>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="col-md-4">
+  <div class="panel panel-default">
+    <div class="panel-heading panel-title">November 2014</div>
+    <div class="panel-body">
+      <div id="canvas-holder">
+        <canvas id="chart-area1" width="100" height="100"/>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="col-md-4">
+  <div class="panel panel-default">
+    <div class="panel-heading panel-title">November 2014</div>
+    <div class="panel-body">
+      <div id="canvas-holder">
+        <canvas id="chart-area3" width="100" height="100"/>
+      </div>
+    </div>
   </div>
 </div>
 <script src="/javascripts/chart.js"></script>
@@ -40,8 +68,37 @@
 
 			];
 
+    var data = {
+    labels: ["January", "February", "March", "April", "May", "June", "July"],
+    datasets: [
+        {
+            label: "My First dataset",
+            fillColor: "rgba(220,220,220,0.2)",
+            strokeColor: "rgba(220,220,220,1)",
+            pointColor: "rgba(220,220,220,1)",
+            pointStrokeColor: "#fff",
+            pointHighlightFill: "#fff",
+            pointHighlightStroke: "rgba(220,220,220,1)",
+            data: [65, 59, 80, 81, 56, 55, 40]
+        },
+        {
+            label: "My Second dataset",
+            fillColor: "rgba(151,187,205,0.2)",
+            strokeColor: "rgba(151,187,205,1)",
+            pointColor: "rgba(151,187,205,1)",
+            pointStrokeColor: "#fff",
+            pointHighlightFill: "#fff",
+            pointHighlightStroke: "rgba(151,187,205,1)",
+            data: [28, 48, 40, 19, 86, 27, 90]
+        }
+    ]
+};
 			window.onload = function(){
-				var ctx = document.getElementById("chart-area").getContext("2d");
-				window.myDoughnut = new Chart(ctx).Doughnut(doughnutData, {responsive : true});
+				var ctx1 = document.getElementById("chart-area1").getContext("2d");
+				window.myDoughnut1 = new Chart(ctx1).Doughnut(doughnutData, {responsive : true});
+        var ctx2 = document.getElementById("chart-area2").getContext("2d");
+        window.myDoughnut2 = new Chart(ctx2).Line(data, {responsive : true});
+        var ctx3 = document.getElementById("chart-area3").getContext("2d");
+        window.myDoughnut3 = new Chart(ctx3).Pie(doughnutData, {responsive : true});
 			};
 </script>
