--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -9,7 +9,7 @@
         <div  class="row">
           {{>leftNav}}
           <div id='main-container' class="container">
-            <div class="col-sm-12">
+            <div class="col-md-offset-1 col-md-11">
                 {{{body}}}
             </div>
           </div>
