--- a/views/receipt/-JbNKzNXx_0ReeNL5pgS.hbs
+++ b/views/receipt/-JbNKzNXx_0ReeNL5pgS.hbs
@@ -11,6 +11,6 @@
     </div>
   </div>
   <div class="col-sm-6">
-    <img src="../uploads/{{id}}.jpg" class="img-responsive rotate90" alt="Responsive image" style='margin-top: 100px'/>
+    <img src="../uploads/{{id}}.jpg" class="img-responsive" alt="Responsive image" style='margin-top: 100px'/>
   </div>
 </div>
